--- a/project.config.json
+++ b/project.config.json
@@ -1,6 +1,5 @@
 {
   "miniprogramRoot": "dist/",
-  "projectname": "taro-zhihu",
   "description": "taro-zhihu",
   "appid": "wx22510e7d1057ae2e",
   "setting": {
@@ -14,18 +13,22 @@
       "ignore": [],
       "disablePlugins": [],
       "outputPath": ""
-    }
+    },
+    "coverView": false,
+    "showShadowRootInWxmlPanel": false,
+    "packNpmRelationList": [],
+    "ignoreUploadUnusedFiles": true
   },
   "compileType": "miniprogram",
-  "libVersion": "3.3.4",
   "srcMiniprogramRoot": "dist/",
-  "packOptions": {
-    "ignore": [],
-    "include": []
-  },
   "condition": {},
   "editorSetting": {
     "tabIndent": "insertSpaces",
     "tabSize": 2
+  },
+  "libVersion": "3.3.4",
+  "packOptions": {
+    "ignore": [],
+    "include": []
   }
 }
